crates/viewer/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.ViewCoordinates.snap
---
source: crates/viewer/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
xyz: [[3, 2, 5]]
